Add responsive elements page

--- a/elements.html
+++ b/elements.html
@@ -464,56 +464,69 @@
                                                             </div>
                                                         </div>
 
-                                                        <div class="element-info-card-wrapper d-flex flex-wrap">
-                                                            <div class="element-info-card">
-                                                                <h3 class="title">
-                                                                    <a href="">Documentation Features</a>
-                                                                </h3>
-                                                                <p class="para-text">
-                                                                    Lorem ipsum dolor amet consectetur adipiscing elit. Mauris nullam the integer quam dolor semp pulvinar vulputate neque.
-                                                                </p>
-                                                            </div>
 
-                                                            <div class="element-info-card">
-                                                                <h3 class="title">
-                                                                    <a href="">Tabs Widget</a>
-                                                                </h3>
-                                                                <p class="para-text">
-                                                                    Lorem ipsum dolor amet consectetur adipiscing elit. Mauris nullam the integer quam dolor semp pulvinar vulputate neque.
-                                                                </p>
-                                                            </div>
-
-                                                            <div class="element-info-card">
-                                                                <h3 class="title">
-                                                                    <a href="">Notice / Message Widget</a>
-                                                                </h3>
-                                                                <p class="para-text">
-                                                                    Lorem ipsum dolor amet consectetur adipiscing elit. Mauris nullam the integer quam dolor semp pulvinar vulputate neque.
-                                                                </p>
-                                                            </div>
-                                                            <div class="element-info-card">
-                                                                <h3 class="title">
-                                                                    <a href="">Accordions Widget</a>
-                                                                </h3>
-                                                                <p class="para-text">
-                                                                    Lorem ipsum dolor amet consectetur adipiscing elit. Mauris nullam the integer quam dolor semp pulvinar vulputate neque.
-                                                                </p>
-                                                            </div>
-                                                            <div class="element-info-card">
-                                                                <h3 class="title">
-                                                                    <a href="">Cheatsheet Widget</a>
-                                                                </h3>
-                                                                <p class="para-text">
-                                                                    Lorem ipsum dolor amet consectetur adipiscing elit. Mauris nullam the integer quam dolor semp pulvinar vulputate neque.
-                                                                </p>
-                                                            </div>
-                                                            <div class="element-info-card">
-                                                                <h3 class="title">
-                                                                    <a href="">More...</a>
-                                                                </h3>
-                                                                <p class="para-text">
-                                                                    Lorem ipsum dolor amet consectetur adipiscing elit. Mauris nullam the integer quam dolor semp pulvinar vulputate neque.
-                                                                </p>
+                                                        <div class="element-info-card-wrapper">
+                                                            <div class="row">
+                                                                <div class="col-md-6 col-lg-6 col-xl-6">
+                                                                    <div class="element-info-card">
+                                                                        <h3 class="title">
+                                                                            <a href="">Documentation Features</a>
+                                                                        </h3>
+                                                                        <p class="para-text">
+                                                                            Lorem ipsum dolor amet consectetur adipiscing elit. Mauris nullam the integer quam dolor semp pulvinar vulputate neque.
+                                                                        </p>
+                                                                    </div>
+                                                                </div>
+                                                                <div class="col-md-6 col-lg-6 col-xl-6">
+                                                                    <div class="element-info-card">
+                                                                        <h3 class="title">
+                                                                            <a href="">Tabs Widget</a>
+                                                                        </h3>
+                                                                        <p class="para-text">
+                                                                            Lorem ipsum dolor amet consectetur adipiscing elit. Mauris nullam the integer quam dolor semp pulvinar vulputate neque.
+                                                                        </p>
+                                                                    </div>
+                                                                </div>
+                                                                <div class="col-md-6 col-lg-6 col-xl-6">
+                                                                    <div class="element-info-card">
+                                                                        <h3 class="title">
+                                                                            <a href="">Notice / Message Widget</a>
+                                                                        </h3>
+                                                                        <p class="para-text">
+                                                                            Lorem ipsum dolor amet consectetur adipiscing elit. Mauris nullam the integer quam dolor semp pulvinar vulputate neque.
+                                                                        </p>
+                                                                    </div>
+                                                                </div>
+                                                                <div class="col-md-6 col-lg-6 col-xl-6">
+                                                                    <div class="element-info-card">
+                                                                        <h3 class="title">
+                                                                            <a href="">Accordions Widget</a>
+                                                                        </h3>
+                                                                        <p class="para-text">
+                                                                            Lorem ipsum dolor amet consectetur adipiscing elit. Mauris nullam the integer quam dolor semp pulvinar vulputate neque.
+                                                                        </p>
+                                                                    </div>
+                                                                </div>
+                                                                <div class="col-md-6 col-lg-6 col-xl-6">
+                                                                    <div class="element-info-card">
+                                                                        <h3 class="title">
+                                                                            <a href="">Cheatsheet Widget</a>
+                                                                        </h3>
+                                                                        <p class="para-text">
+                                                                            Lorem ipsum dolor amet consectetur adipiscing elit. Mauris nullam the integer quam dolor semp pulvinar vulputate neque.
+                                                                        </p>
+                                                                    </div>
+                                                                </div>
+                                                                <div class="col-md-6 col-lg-6 col-xl-6">
+                                                                    <div class="element-info-card">
+                                                                        <h3 class="title">
+                                                                            <a href="">More...</a>
+                                                                        </h3>
+                                                                        <p class="para-text">
+                                                                            Lorem ipsum dolor amet consectetur adipiscing elit. Mauris nullam the integer quam dolor semp pulvinar vulputate neque.
+                                                                        </p>
+                                                                    </div>
+                                                                </div>
                                                             </div>
                                                         </div>
                                                     </div>
