--- a/two-columns.html
+++ b/two-columns.html
@@ -377,7 +377,7 @@
                         <div class="row justify-content-center">
                             <div class="col-xl-8">
                                 <div class="rt-hero-section-content-wrapper">
-                                    <div class="searchbox-container searchbox-container--style-1 d-flex justify-content-between align-items-center">
+                                    <div class="searchbox-container searchbox-container--style-1 d-none d-sm-flex justify-content-between align-items-center">
                                         <div class="searchbox-textfield">
                                             <form class="rt-searchbox-form" role="search" action="" method="get">
                                                 <input type="text" value="" placeholder="Have a question?" class="searchbox-input">
