Add responsive topic-details page

--- a/index.html
+++ b/index.html
@@ -389,7 +389,15 @@
                                     <div class="searchbox-container searchbox-container--style-1 d-none d-sm-flex d-flex justify-content-between align-items-center">
                                         <div class="searchbox-textfield">
                                             <form class="rt-searchbox-form" role="search" action="" method="get">
-                                                <input type="text" value="" placeholder="Have a question?" class="searchbox-input">
+                                                <div class="input-area d-flex align-items-center">
+                                                    <span>
+                                                        <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                            <path d="M7.1875 13.124C10.4667 13.124 13.125 10.4657 13.125 7.18652C13.125 3.90733 10.4667 1.24902 7.1875 1.24902C3.90831 1.24902 1.25 3.90733 1.25 7.18652C1.25 10.4657 3.90831 13.124 7.1875 13.124Z" stroke="#8D8D8D" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                                            <path d="M13.75 13.749L12.5 12.499" stroke="#8D8D8D" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                                        </svg>
+                                                    </span>
+                                                    <input type="text" value="" placeholder="Have a question?" class="searchbox-input">
+                                                </div>
                                             </form>
                                         </div>
     
