Add responsive topic-details page

--- a/faq.html
+++ b/faq.html
@@ -417,7 +417,7 @@
                         <div class="row justify-content-center">
                             <div class="col-xl-5">
                                 <div class="section-text-content text-center">
-                                    <h1 class="section-heading section-heading--style-2 wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="400ms">
+                                    <h1 class="section-heading text-center section-heading--style-2 wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="400ms">
                                         Frequently Asked Questions
                                     </h1>
                                     <p class="para-text wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="500ms">
@@ -928,7 +928,7 @@
                         <div class="row justify-content-center">
                             <div class="col-xl-5">
                                 <div class="section-text-content text-center">
-                                    <h1 class="section-heading section-heading--style-2 wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="400ms">
+                                    <h1 class="section-heading section-heading--style-2 text-center wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="400ms">
                                         Frequently Asked Questions
                                     </h1>
                                     <p class="para-text wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="500ms">
@@ -1101,7 +1101,7 @@
                         <div class="row justify-content-center">
                             <div class="col-xl-5">
                                 <div class="section-text-content text-center">
-                                    <h1 class="section-heading section-heading--style-2 wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="400ms">
+                                    <h1 class="section-heading section-heading--style-2 text-center wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="400ms">
                                         Frequently Asked Questions
                                     </h1>
                                     <p class="para-text wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="500ms">
