--- a/blog-grid.html
+++ b/blog-grid.html
@@ -413,7 +413,7 @@
                     <div class="container">
                         <div class="blogs-wrapper">
                             <div class="row">
-                                <div class="col-xl-4">
+                                <div class="col-lg-6 col-md-6 col-sm-12 col-xl-4">
                                     <div class="blog-post-item">
                                         <div class="blog-post-img">
                                             <div class="blog-post-img-link">
@@ -446,7 +446,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-xl-4">
+                                <div class="col-lg-6 col-md-6 col-sm-12 col-xl-4">
                                     <div class="blog-post-item">
                                         <div class="blog-post-img">
                                             <div class="blog-post-img-link">
@@ -479,7 +479,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-xl-4">
+                                <div class="col-lg-6 col-md-6 col-sm-12 col-xl-4">
                                     <div class="blog-post-item">
                                         <div class="blog-post-img">
                                             <div class="blog-post-img-link">
@@ -512,7 +512,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-xl-4">
+                                <div class="col-lg-6 col-md-6 col-sm-12 col-xl-4">
                                     <div class="blog-post-item">
                                         <div class="blog-post-img">
                                             <div class="blog-post-img-link">
@@ -545,7 +545,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-xl-4">
+                                <div class="col-lg-6 col-md-6 col-sm-12 col-xl-4">
                                     <div class="blog-post-item">
                                         <div class="blog-post-img">
                                             <div class="blog-post-img-link">
@@ -578,7 +578,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-xl-4">
+                                <div class="col-lg-6 col-md-6 col-sm-12 col-xl-4">
                                     <div class="blog-post-item">
                                         <div class="blog-post-img">
                                             <div class="blog-post-img-link">
@@ -611,7 +611,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-xl-4">
+                                <div class="col-lg-6 col-md-6 col-sm-12 col-xl-4">
                                     <div class="blog-post-item">
                                         <div class="blog-post-img">
                                             <div class="blog-post-img-link">
@@ -644,7 +644,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-xl-4">
+                                <div class="col-lg-6 col-md-6 col-sm-12 col-xl-4">
                                     <div class="blog-post-item">
                                         <div class="blog-post-img">
                                             <div class="blog-post-img-link">
