Add responsive contact page

--- a/blog-single.html
+++ b/blog-single.html
@@ -477,7 +477,7 @@
                                             </p>
                                         </div>
 
-                                        <div class="single-blog-tag-share align-items-center d-flex justify-content-between wow animate__fadeInUp animate__animated animate__animated animate__animated" data-wow-duration="1200ms" data-wow-delay="200ms" style="visibility: visible; animation-duration: 1200ms; animation-delay: 200ms; animation-name: fadeInUp;">
+                                        <div class="single-blog-tag-share align-items-center d-flex flex-wrap justify-content-between wow animate__fadeInUp animate__animated animate__animated animate__animated" data-wow-duration="1200ms" data-wow-delay="200ms" style="visibility: visible; animation-duration: 1200ms; animation-delay: 200ms; animation-name: fadeInUp;">
                                             <div class="single-tag-area">
                                                 <ul class="d-flex align-items-center">
                                                     <li><h4 class="title">Tags:</h4></li>
