--- a/contact.html
+++ b/contact.html
@@ -413,7 +413,7 @@
                 <section class="contact-section section-padding">
                     <div class="container">
                         <div class="row">
-                            <div class="col-xl-5">
+                            <div class="col-md-12 col-lg-5 col-xl-5">
                                 <div class="contact-info-area">
                                     <div class="section-text-content">
                                         <h1 class="section-heading section-heading--style-2 text-start wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="400ms">
@@ -462,7 +462,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xl-7">
+                            <div class="col-md-12 col-lg-7 col-xl-7">
                                 <div class="contact-form-area">
                                     <div class="section-text-content">
                                         <div class="section-name">Contact Us</div>
