Add animation to home-2, home-3 pages

--- a/index-3.html
+++ b/index-3.html
@@ -386,7 +386,7 @@
                                         </p>
                                     </div>
 
-                                    <div class="searchbox-container searchbox-container--style-3 d-none d-sm-flex d-flex justify-content-between align-items-center">
+                                    <div class="searchbox-container searchbox-container--style-3 d-none d-sm-flex d-flex justify-content-between align-items-center wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="600ms">
                                         <div class="searchbox-textfield">
                                             <form class="rt-searchbox-form" role="search" action="" method="get">
                                                 <div class="input-area d-flex align-items-center">
@@ -416,14 +416,17 @@
                                         </div>
                                     </div>
 
-                                    <div class="search-text d-none d-sm-flex">
+                                    <div class="search-text d-none d-sm-flex wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="700ms">
                                         <p><span>Popular:</span> Code, Basic, Price, <a href="">WordPress</a></p>
                                     </div>
                                 </div>
 
                             </div>
+                            <!-- col end -->
                         </div>
+                        <!-- row end -->
                     </div>
+                    <!-- container end -->
                 </section>
                 <!-- end Hero section -->
 
@@ -447,6 +450,7 @@
                                     </a>
                                 </div>
                             </div>
+                            <!-- col end -->
                             <div class="col-md-6 col-lg-6 col-xl-4 wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="500ms">
                                 <div class="rt-card rt-card--style-6">
                                     <div class="icon d-flex align-items-center">
@@ -463,6 +467,7 @@
                                     </a>
                                 </div>
                             </div>
+                            <!-- col end -->
                             <div class="col-md-6 col-lg-6 col-xl-4 wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="600ms">
                                 <div class="rt-card rt-card--style-6">
                                     <div class="icon d-flex align-items-center">
@@ -479,8 +484,11 @@
                                     </a>
                                 </div>
                             </div>
+                            <!-- col end -->
                         </div>
+                        <!-- row end -->
                     </div>
+                    <!-- container end -->
                 </section>
                 <!-- end service section -->
 
@@ -493,14 +501,16 @@
                                     <h2 class="section-heading wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="400ms">
                                         Didn't find Any Solution?
                                     </h2>
-                                    <p class="para-text">
+                                    <p class="para-text wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="500ms">
                                         Lorem ipsum dolor sit amet consectetur adipiscing elit. Mauris nullam the as integer quam faucibus pulvinar vulputate neque. 
                                     </p>
                                 </div>
                             </div>
+                            <!-- col end -->
                         </div>
+                        <!-- row end -->
                         <div class="row">
-                            <div class="col-md-6 col-xl-6">
+                            <div class="col-md-6 col-xl-6 wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="400ms">
                                 <div class="rt-card rt-card--style-7 rt-color-shade26-bg">
                                     <div class="icon">
                                         <svg width="80" height="80" viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -520,7 +530,8 @@
                                     <a href="" class="card-btn">Go To Help Page</a>
                                 </div>
                             </div>
-                            <div class="col-md-6 col-xl-6">
+                            <!-- col end -->
+                            <div class="col-md-6 col-xl-6 wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="500ms">
                                 <div class="rt-card rt-card--style-7 rt-color-shade27-bg">
                                     <div class="icon">
                                         <svg width="80" height="80" viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -538,8 +549,11 @@
                                     <a href="" class="card-btn">Go to Live Chat</a>
                                 </div>
                             </div>
+                            <!-- col end -->
                         </div>
+                        <!-- row end -->
                     </div>
+                    <!-- container end -->
 
                     <div class="shapes d-none d-lg-block">
                         <ul>
@@ -562,7 +576,7 @@
                 <section class="best-online-documentation-section best-online-documentation-section--style-3 section-padding">
                     <div class="container">
                         <div class="row">
-                            <div class="col-lg-12 col-xl-4">
+                            <div class="col-lg-12 col-xl-4 wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="400ms">
                                 <div class="best-online-doc-forum-area">
                                     <h3 class="title">Forums</h3>
                                     <div class="forum-form">
@@ -626,7 +640,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-12 col-xl-8">
+                            <!-- col end -->
+                            <div class="col-lg-12 col-xl-8 wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="500ms">
                                 <div class="best-documentation-info-wrapper">
                                     <div class="section-text-content">
                                         <h2 class="section-heading wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="400ms">
@@ -637,7 +652,7 @@
                                         </p>
                                     </div>
 
-                                    <div class="logo-card logo-card--style-3">
+                                    <div class="logo-card logo-card--style-3 wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="500ms">
                                         <div class="logo">
                                             <img src="images/best-online-doc/logo-1.svg" alt="">
                                             <p class="para-text">
@@ -688,7 +703,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="logo-card logo-card--style-3">
+                                    <div class="logo-card logo-card--style-3 wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="600ms">
                                         <div class="logo">
                                             <img src="images/best-online-doc/logo-2.svg" alt="">
                                             <p class="para-text">
@@ -739,7 +754,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="logo-card logo-card--style-3">
+                                    <div class="logo-card logo-card--style-3 wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="700ms">
                                         <div class="logo">
                                             <img src="images/best-online-doc/logo-3.svg" alt="">
                                             <p class="para-text">
@@ -790,7 +805,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="logo-card logo-card--style-3">
+                                    <div class="logo-card logo-card--style-3 wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="800ms">
                                         <div class="logo">
                                             <img src="images/best-online-doc/logo-4.svg" alt="">
                                             <p class="para-text">
@@ -843,8 +858,11 @@
                                     </div>
                                 </div>
                             </div>
+                            <!-- col end -->
                         </div>
+                        <!-- row end -->
                     </div>
+                    <!-- container end -->
                 </section>
                 <!-- end best online-documentation section -->
 
@@ -863,7 +881,7 @@
                                         </div>
                                     </div>
                                     <div class="col-xl-6">
-                                        <div class="call-to-cation-form-wrapper d-flex">
+                                        <div class="call-to-cation-form-wrapper d-flex wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="500ms">
                                             <form action="" class="">
                                                 <input type="text" placeholder="Your email">
                                             </form>
@@ -872,8 +890,11 @@
                                     </div>
                                 </div>
                             </div>
+                            <!-- col end -->
                         </div>
+                        <!-- row end -->
                     </div>
+                    <!-- container end -->
                 </section>
                 <!-- end call-to-action-section -->
 
@@ -1017,6 +1038,7 @@
                             </div>
                         </div>
                     </div>
+                    <!-- container end -->
                 </footer>
                 <!-- end footer section -->
 
